<resources>
    <string name="app_name">BPS FM Mobile App</string>
    <string name="login_text_view">Login</string>
    <string name="login_message_text_view">Login to your account to continue from where you stopped</string>
    <string name="emaiL_input">Email address</string>
    <string name="password_input">Password</string>
    <string name="forgot_password_text_view">Forgot Password?</string>
    <string name="login_button">Login</string>
    <string name="new_business_or_vendor_text_view">New business or vendor?</string>
    <string name="sign_up_text_view">Sign Up</string>
    <string name="main_info_text_view">Make informed energy decisions effortlessly with Beacon</string>
    <string name="login_to_account_text_view">Login to account</string>
    <string name="forgot_password_text_view1">Forgot Password</string>
    <string name="forgot_password_info">Please provide your registered email address to receive instructions on how to reset your password</string>
    <string name="submit_button">Submit</string>
    <string name="back_to_login_text_view">Back to login</string>
    <string name="new_account_sign_up_text_view">New account sign up</string>
    <string name="select_your_preferred_account_to_continue">Select your preferred account to continue.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="business_sign_up_text_view">Business Sign up</string>
    <string name="business_signup_info_text_view">Enter your details in the fields below to create your Business account</string>
    <string name="first_name_text_view">First name</string>
    <string name="last_name_text_view">Last name</string>
    <string name="email_address_text_view">Email address</string>
    <string name="phone_number_text_view">Phone number</string>
    <string name="account_type_edit_text">Account type</string>
    <string name="business_name_input">Business name</string>
    <string name="business_type_input">Business type</string>
    <string name="business_address_input">Business address</string>
    <string name="get_started_button">Get started</string>
    <string name="have_an_account_text_view">Have an account?</string>
    <string name="log_in_text_view">Log in</string>
    <string name="reset_password_text_view">Reset password</string>
    <string name="enter_a_new_password_to_your_account_info">Enter a new password to your account.</string>
    <string name="new_password_input">New password</string>
    <string name="retype_new_password_input">Retype new password</string>
    <string name="business_account_text_view">Business account</string>
    <string name="vendor_account_text_view">Vendor account</string>
    <string name="continue_button">Continue</string>
    <string name="vendor_sign_up_text_view">Vendor Sign up</string>
    <string name="vendor_info_signup_text_view">Enter your details in the fields below to create your Vendor account</string>
    <string name="phone_number_input">Phone number</string>
    <string name="vendor_type_input">Vendor type</string>
    <string name="title_activity_home">HomeTestActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Jane Dumebi</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Dashboard</string>
    <string name="menu_notifications">Notifications</string>
    <string name="menu_energy_consumption">Energy Consumption</string>
    <string name="menu_diesel_monitoring">Diesel monitoring</string>
    <string name="home_nav">Home</string>
    <string name="services_nav">Services</string>
    <string name="guests_nav">Guests</string>
    <string name="payment_nav">Payment</string>
    <string name="settings">Settings</string>
    <string name="support">Support</string>
    <string name="quick_actions">Quick actions</string>
    <string name="request_service">Request Service</string>
    <string name="make_payment">Make payment</string>
    <string name="add_new_guest">Add new guest</string>
    <string name="add_request">Add request</string>
    <string name="request_type">Request type</string>
    <string name="priority">Priority</string>
    <string name="requested_by">Requested by</string>
    <string name="request_description">Request description</string>
    <string name="request_invoice">Request invoice</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="create_a_new_service_request">Create a new service request</string>
    <string name="request_category">Request category</string>
    <string name="upload_invoice">Upload invoice</string>
    <string name="click_to_upload">Click to upload</string>
    <string name="or_drag_and_drop_file_here">or drag and drop file here</string>
    <string name="svg_png_or_jpg_files_accepted">SVG, PNG, Or JPG files accepted</string>
    <string name="new_guest">New guest</string>
    <string name="enter_the_details_for_the_new_guest">Enter the details for the new guest</string>
    <string name="guest_full_name">Guest full name</string>
    <string name="phone_number">Phone number</string>
    <string name="expected_date">Expected date</string>
    <string name="expected_stay_time">Expected stay time</string>
    <string name="dd_mm_yyyy">DD/MM/YYYY</string>
    <string name="hh_mm">HH:MM</string>
    <string name="am">AM</string>
    <string name="dashboard">Dashboard</string>
    <string name="logout">Logout</string>
    <string name="report">Report</string>
    <string name="welcome_back_joe">Welcome back Joe,</string>
    <string name="announcement">Announcement</string>
    <string name="feature_updates">Feature updates</string>
    <string name="power_cuts">Power cuts</string>
    <string name="you_can_now_chat_with_the_support_team_within_the_app_just_click_on_support_in_the_left_menu">You can now chat with the support team within the app! Just click on ‘Support’ in the left menu.</string>
    <string name="consumption">Consumption</string>
    <string name="average_run_time">Average run time</string>
    <string name="carbon_reduction">Carbon reduction</string>
    <string name="due_to_insurgencies_in_surrounding_environs_the_estate_gate_will_now_be_closed_by_7_00pm_and_open_by_6_00am">Due to insurgencies in surrounding environs, the estate gate will now be closed by 7:00pm and open by 6:00am</string>
    <string name="power_cuts_num">Power cuts num</string>
    <string name="energy_savings">Energy savings</string>
    <string name="carbon_savings">Carbon savings</string>
    <string name="this_month">This Month</string>
    <string name="_500kwh">500kWh</string>
    <string name="_400kwh">400kWh</string>
    <string name="_300kwh">300kWh</string>
    <string name="_200kwh">200kWh</string>
    <string name="_100kwh">100kWh</string>
    <string name="_0kwh">0kWh</string>
    <string name="apr_1">Apr 1</string>
    <string name="apr_2">Apr 2</string>
    <string name="apr_3">Apr 3</string>
    <string name="apr_4">Apr 4</string>
    <string name="apr_5">Apr 5</string>
    <string name="apr_6">Apr 6</string>
    <string name="apr_7">Apr 7</string>
    <string name="apr_8">Apr 8</string>
    <string name="apr_9">Apr 9</string>
    <string name="apr_10">Apr 10</string>
    <string name="apr_11">Apr 11</string>
    <string name="apr_12">Apr 12</string>
    <string name="apr_13">Apr 13</string>
    <string name="apr_14">Apr 14</string>
    <string name="cost_savings">Cost savings</string>
    <string name="diesel">Diesel</string>
    <string name="_300_00">₦300.00</string>
    <string name="_70kwh">70kwh</string>
    <string name="solar">Solar</string>
    <string name="gas">Gas</string>
    <string name="energy_sources">Energy sources</string>
    <string name="_29_aug_2022_29_sep_2022">29 Aug, 2022 - 29 Sep 2022</string>
    <string name="grid">Grid</string>
    <string name="_13">13%</string>
    <string name="_46">46%</string>
    <string name="_23">23%</string>
    <string name="_40">40%</string>
    <string name="expected_vs_received_vs_spend">Expected vs Received vs Spend</string>
    <string name="actual">Actual</string>
    <string name="received">Received</string>
    <string name="expected">Expected</string>
    <string name="_1mwh">1MWh</string>
    <string name="_750kwh">750kWh</string>
    <string name="_250kwh">250kWh</string>
    <string name="sep_1">Sep 1</string>
    <string name="sep_3">Sep 3</string>
    <string name="sep_7">Sep 7</string>
    <string name="sep_6">Sep 6</string>
    <string name="sep_9">Sep 9</string>
    <string name="sep_12">Sep 12</string>
    <string name="sep_15">Sep 15</string>
    <string name="sep_18">Sep 18</string>
    <string name="sep_21">Sep 21</string>
    <string name="sep_24">Sep 24</string>
    <string name="sep_27">Sep 27</string>
    <string name="sep_30">Sep 30</string>
    <string name="recent_service_requests">Recent service requests</string>
    <string name="view_all">View all</string>
    <string name="fur_17">FUR-17</string>
    <string name="open">Open</string>
    <string name="plumbing_routines">Plumbing • Routines</string>
    <string name="_15_jan_2022">15 Jan 2022</string>
    <string name="electrical_repairs">Electrical • Repairs</string>
    <string name="cleaning_repairs">Cleaning • Repairs</string>
    <string name="pending">Pending</string>
    <string name="vs_last_month">vs Last month</string>
    <string name="accounts">Accounts</string>
    <string name="revenue">Revenue</string>
    <string name="vendors">Vendors</string>
    <string name="service_requests">Service requests</string>
    <string name="_84_3">84.3%</string>
    <string name="_0_0">0.0%</string>
    <string name="_15_7">15.7%</string>
    <string name="revenue_summary">Revenue summary</string>
</resources>