<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/baseline_notifications_24"
            android:title="@string/menu_notifications" />
        <item
            android:id="@+id/nav_energy_consumption"
            android:icon="@drawable/lamp_charge"
            android:title="@string/menu_energy_consumption" />
        <item
            android:id="@+id/nav_diesel_monitoring"
            android:icon="@drawable/bucket"
            android:title="@string/menu_diesel_monitoring" />
    </group>
</menu>