<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".signup.VendorSignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/text_view_vendor_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/vendor_sign_up_text_view"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_view_vendor_signup_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/vendor_info_signup_text_view"
            android:textSize="16sp" />


        <TextView
            android:id="@+id/text_view_business_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/business_name_input"
            android:textColor="@color/black"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/edit_text_business_name"
            style="@style/NoUnderlineEditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginTop="8dp"
            android:inputType="textCapWords" />


        <TextView
            android:id="@+id/text_view_email_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/email_address_text_view"
            android:textColor="@color/black"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/edit_text_email_address"
            style="@style/NoUnderlineEditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginTop="8dp"
            android:inputType="textEmailAddress" />


        <TextView
            android:id="@+id/text_view_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/phone_number"
            android:textColor="@color/black"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/edit_text_phone_number"
            style="@style/NoUnderlineEditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginTop="8dp"
            android:inputType="phone" />


        <TextView
            android:id="@+id/text_view_account_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/vendor_type_input"
            android:textColor="@color/black"
            android:textStyle="bold" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <EditText
                    android:id="@+id/edit_text_vendor_type"
                    style="@style/NoUnderlineEditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:inputType="textCapWords" />

                <ImageView
                    android:id="@+id/image_view_angle_down"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center|end"
                    android:layout_marginTop="2dp"
                    android:layout_marginEnd="5dp"
                    android:src="@drawable/angle_down" />

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_vendor_get_started"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:backgroundTint="@color/button_color"
            android:text="@string/get_started_button"
            android:textColor="@color/white" />

    </LinearLayout>


    <TextView
        android:id="@+id/text_view_vendor_have_an_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/have_an_account_text_view"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/text_view_vendor_log_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="80dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/log_in_text_view"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="@+id/text_view_vendor_have_an_account" />


</androidx.constraintlayout.widget.ConstraintLayout>